[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
Flask = {extras = ["async"], version = "^2.2.2"}
httpx = "^0.23.1"
pandas = "^1.5.2"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
python-lsp-server = "^1.5.0"
debugpy = "^1.6.2"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"